fixed conflicting z-indexes

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -99,6 +99,7 @@ header > nav > ul li a:hover {
     height: fit-content;
     width: 100%;
     margin-bottom: 1rem;
+    z-index: -1 !important;
 }
 
 .main  #form-home {
@@ -248,6 +249,7 @@ footer .social-icons{
     height: 93vh;
     display: grid;
     place-items: center;
+    z-index: -1;
 }
 #about, #home-feedback {
     position: relative;
@@ -447,10 +449,10 @@ form .submit-btn:hover{
         top: 15%;
         width: 100vw;
         height: 70vh;
-        z-index: 1000;
+        z-index: 999;
         transition: 1s;
         gap: 0;
-        background-color: #17153B;
+        background-color: red;
 
     }
     
@@ -520,6 +522,7 @@ form .submit-btn:hover{
     #about {
         display: flex;
         flex-direction: column;
+        z-index: -1;
     }
     #about .image {
         display: none;
